CBRS Small Cell Model swapped for commerical names (#945)
* removed ‘$’ from all ‘$HNT’ references

* 5G dev docs

* PR cleanup

* emmisions schedule and homepage links

homepage links to 5G documentation added, updated 5G banner image, inclueded warning on FCC CBRS misuse, wording fixes

* Update docs/5g-on-helium/5g-on-helium.mdx

* Update docs/5g-on-helium/5g-on-helium.mdx

Co-authored-by: Abhay Kumar <75+abhay@users.noreply.github.com>

* Apply suggestions from code review

Co-authored-by: Abhay Kumar <75+abhay@users.noreply.github.com>

* trimmed tables and revisions

* Apply suggestions from code review

Co-authored-by: Abhay Kumar <75+abhay@users.noreply.github.com>

* added reward scalar chart to device models

incorporated feedback and fixed typos. added reward scalar chart for Small Cell Radio type

* better phrasing

* Apply suggestions from code review

Co-authored-by: Abhay Kumar <75+abhay@users.noreply.github.com>

* example rewards calcilation, reorg info

added example rewards calculations for MOBILE 5G Hotspots, reorganized sections across these two core pages

* typos

* review notes

* missed a line

* emissions curve explanation

* community feedback

incrporated feedback from 5g-cbrs discord channel discussions.
- typos
- standardized language on “Small Cell Radio” and “5G Hotspot”
- admonition to call out example rewards calculation are examples
- included language to clarify that multiple Small Cell Radios can be connected to a single 5G Hotspot

* docs feedback fixes

* grammar correction pass

* CBRS Small Cell Model swapped for commerical names

* cbrs radio info moved to additional page

* rename pages and shuffle order of CBRS info page

* example calculation typo correction

* genesis period explainer text

* the, not The

* Apply suggestions from code review

Co-authored-by: Coco Tang <coco@helium.com>

* Update docs/5g-on-helium/cbrs-radios.mdx

Co-authored-b

--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -19,64 +19,26 @@ bands, which requires denser networks with more nodes, which further increases t
 acquisition.
 
 The Helium model decentralizes site acquisition costs and enables communities to participate in
-building reliable, high bandwidth networks using technologies like CBRS and Wi-Fi. This does not
-completely replace service providers altogether. Instead, we see service providers as a critical
-component of this ecosystem.
+building reliable, high bandwidth networks using technologies like
+[CBRS](./5g-on-helium/cbrs-radios) and Wi-Fi. This does not completely replace service providers
+altogether. Instead, we see service providers as a critical component of this ecosystem.
 
-## CBRS Small Cell Radios
+:::tip Purchase a 5G Hotspot and CBRS Small Cell Radios
 
-Citizens Broadband Radio Service (CBRS) is a wide broadcast 3.5Ghz band in the United States that
-does not require a tower operator to acquire spectrum licenses.
-
-More information about CBRS can be found on the
-[Federal Communications Commission Website](https://www.fcc.gov/35-ghz-band-overview)
-
-5G Hotspots can participate in providing 5G cellular coverage when connected to Indoor or Outdoor
-CBRS Small Cell Radios while also participating in providing LoRaWAN coverage.
-
-:::info
-
-[Helium Discord](https://discord.gg/helium) is the best place to get real-time support from the
-community.
-
-The [#5g-cbrs](discord://discord.com/channels/404106811252408320/836735476659912754) channel is most
-relevant for using 5G on the network.
+Visit [https://www.helium.com/summer](https://www.helium.com/summer) for more information on
+purchasing a 5G Hotspot and CBRS Radios to build coverage in your area!
 
 :::
-
-### Outdoor Small Cell Radios
-
-Outdoor Small Cell Radios are more powerful than Indoor Small Cell Radios and are weatherized to
-endure the elements. Outdoor Small Cell Radios create a larger area of 5G coverage while requiring a
-bit more planning when installing and maintaining.
-
-Outdoor Small Cell Radios require installation above ground level and require registration with the
-Spectrum Access System (SAS) to operate. Please be sure to evaluate your locations and ability to
-install these Small Cell Radios, and consider hiring a professional to ensure your installation is
-secure and meets all regulatory requirements.
-
-SAS registration is expected to be completed within 24 hours of submission, Hotspot Owners will be
-contacted via email with a confirmation of successful registration, or with a rejection reply and an
-explanation of what needs to be corrected.
-
-### Indoor Small Cell Radios
-
-Indoor Small Cell Radios are less powerful and are ideal for installations such as coffee shops,
-bars, grocery stores, etc. Indoor Small Cell Radios are generally easier to install and create a
-smaller, localized area of 5G coverage.
-
-Indoor Small Cell Radios are physically smaller radios and can be installed at any height.
-Installing an Indoor Small Cell Radio outdoors is not recommended as they are not weather resistant.
 
 ## Network of Networks
 
 With the passing of
 [HIP 51: Helium DAOs](https://github.com/helium/HIP/blob/main/0051-helium-dao.md) a general
 structure for onboarding new Decentralized Network Protocols (DNPs) to the broader Helium Network
-was created. The Helium Mobile DAO with 5G Hotspots are the first step in the evolution of the
-Helium ecosystem.
+was created. The Helium Mobile DAO with 5G Hotspots is the first step in the evolution of the Helium
+ecosystem.
 
-## Helium 5G Rollout
+## The Helium MOBILE Token
 
 The passing of [HIP 51: Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md)
 allows for the creation of MOBILE tokens that will reward 5G Hotspot operators on the existing
