corrected wrapped text in example status message

--- a/docs/5g-on-helium/cbrs-radios.mdx
+++ b/docs/5g-on-helium/cbrs-radios.mdx
@@ -133,11 +133,9 @@ Spectrum Access once the DPA event has concluded.
 
 A message similar to the following may also be present:
 
-```bash
-Spectrum Access status went back to “Connected” after it had been working. Wait and don’t reboot.
-Suspension can last from hours to days for DPA Events. Contact support if you have been suspended for
-more than 48hrs. This is more prevalent if your location is within 150km of the DPA Regions.
-```
+> Spectrum Access status went back to “Connected” after it had been working. Wait and don’t reboot.
+> Suspension can last from hours to days for DPA Events. Contact support if you have been suspended
+> for more than 48hrs. This is more prevalent if your location is within 150km of the DPA Regions.
 
 ### DPA Neighborhood Regions
 
