--- a/docs/wallets/app-wallet/twelve-words.mdx
+++ b/docs/wallets/app-wallet/twelve-words.mdx
@@ -7,9 +7,13 @@ slug: /wallets/app-wallet/twelve-words
 
 # Twelve Words Seed Phrase
 
-When setting up a Helium wallet through the app, you are prompted to write down the 12 words seed
+When setting up a Helium wallet through the Helium Hotspot app, you are prompted to write down the 12 words seed
 phrase. These are the mnemonic phrase generated from the private key of your wallet, and the only
 way to access the wallet.
+
+The 12 word seed can be used or imported on both the [Helium Hotspot APP](https://docs.helium.com/wallets/app-wallet) and the [Helium Wallet APP](https://docs.helium.com/wallets/helium-wallet-app).
+You cannot import a 24 word seed phrase in the Helium Hotspot App, these will only work in the Helium Wallet Aapp.
+Hotspots sent to a 24 word wallet can only be managed/transfered by the hotspot vendor's app or the cli-wallet.
 
 :::warning
 
@@ -22,16 +26,16 @@ Hotspot to a different account without them.
 
 ## Twelve Word Security
 
-A friendly reminder about those 12 words… When you first created an account in the Helium App, those
+A friendly reminder about those 12 words… When you first created an account in the Helium Hotspot App, those
 12 words represent the private key to your wallet account.
 
 ### What does this mean?
 
 It means that those 12 words are the only way to access your Hotspots and HNT balance. Lose those 12
-words, lose your access to your HNT and your hotspots and their future earnings.
+words, and you lose your access to your HNT and your hotspots and their future earnings. No-one can help you recover them.
 
 Luckily, there’s an easy way to back up those 12 words. Write them down, save it, and back it up. Go
-to the Helium App > … menu > Reveal Words.
+to the Helium Hotspot App > … menu > Reveal Words.
 
 :::note
 
@@ -41,26 +45,30 @@ Do not logout of your phone wallet or uninstall the app without first writing do
 
 The only places you are required to enter your 12 words are:
 
-1. The [Helium APP](https://docs.helium.com/wallets/app-wallet) - on your phone
-2. The [CLI Wallet](https://docs.helium.com/wallets/cli-wallet) - on your computer
-3. The [Ledger Wallet](https://docs.helium.com/wallets/ledger) - on your computer or phone NEVER
+1. The [Helium Hotspot APP](https://docs.helium.com/wallets/app-wallet) - on your phone
+2. The [Helium Wallet APP](https://docs.helium.com/wallets/helium-wallet-app) - on your phone
+3. The [CLI Wallet](https://docs.helium.com/wallets/cli-wallet) - on your computer
+4. The [Ledger Wallet](https://docs.helium.com/wallets/ledger) - on your computer or phone NEVER
    enter them into a website.
 
 When entering the 12 worlds make sure you:
 
 1. Enter them in the right order
-2. Get the spelling correct. Check here for correct spelling:
+2. Get the spelling correct. Check words here for correct spelling:
    [https://github.com/bitcoin/bips/blob/master/bip-0039/english.txt](https://github.com/bitcoin/bips/blob/master/bip-0039/english.txt)
 
-No Helium Support person will EVER ask for your 12 words or ask you to enter them into a website to
+No Helium Support or Admin person will EVER ask for your 12 or 24 words or ask you to enter them into a website to
 fix a problem.
 
 :::note
 
-Remember two things.
+Remember these important things.
 
 1. Write them down and keep them safe, do it now if you you are not sure.
 2. Imagine they are cash, never give them to anyone you would not trust with the HNT value and
    Hotspot value.
+3. Do not enter these in any app or website not in the list of 4 above. Even vendor apps.
+4. Do not store images of your words on cloud based doc/file stores. 
+   
 
 :::
