more information on DPA Event regions

--- a/docs/5g-on-helium/cbrs-radios.mdx
+++ b/docs/5g-on-helium/cbrs-radios.mdx
@@ -143,21 +143,10 @@ A message similar to the following may also be present:
 > Suspension can last from hours to days for DPA Events. Contact support if you have been suspended
 > for more than 48hrs. This is more prevalent if your location is within 150km of the DPA Regions.
 
-### Spectrum Access `FAILURE` Status
-
-This status is alarming, but do not let it scare you.
-
-For newly installed Small Cell Radios, this "Failure" status is likely because the registration
-process has not been completed and submitted to the SAS.
-
-You may see information similar to this:
-
-> SAS status code: 200 SAS response message: Response data: installationParam
-
-For any other warning messages, contact [FreedomFi Support](https://freedomfi.com/contact-us/)
-directly.
-
 ### DPA Neighborhood Regions
+
+DPA regions can be viewed in the map below. Remember, these coordinates are not exact, and the
+effected regions for each DPA Event can reach as far as 150km inland.
 
 <div class="maps_iframe">
   <iframe
@@ -176,6 +165,20 @@ This link and the included information are for reference only and may not addres
 Neighborhoods.
 
 :::
+
+### Spectrum Access `FAILURE` Status
+
+This status is alarming, but do not let it scare you.
+
+For newly installed Small Cell Radios, this "Failure" status is likely because the registration
+process has not been completed and submitted to the SAS.
+
+You may see information similar to this:
+
+> SAS status code: 200 SAS response message: Response data: installationParam
+
+For any other warning messages, contact [FreedomFi Support](https://freedomfi.com/contact-us/)
+directly.
 
 ### Small Cell Radios Need GPS
 
