--- a/docs/wallets/app-wallet/discovery-mode.mdx
+++ b/docs/wallets/app-wallet/discovery-mode.mdx
@@ -9,7 +9,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # Discovery Mode
 
-Discovery Mode is one of the tools available for Hotspot owners to understand their Hotspot coverage
+Discovery Mode is a discontunted tool for Hotspot owners to understand their Hotspot coverage
 and optimize their Hotspot setup.
 
 Read our
