--- a/docs/wallets/app-wallet/rak-hotspot.mdx
+++ b/docs/wallets/app-wallet/rak-hotspot.mdx
@@ -6,8 +6,9 @@ slug: /wallets/app-wallet/rak-hotspot-setup
 ---
 
 # RAK Hotspot Setup
-
-RAK Hotspot Miner was the first third-party Hotspot on The People's Network.
+ 
+RAK Hotspot Miner was the first third-party Hotspot on The People's Network and documentation on
+onboarding is now responsbility of Rak or MNTD.
 
 This RAK Hotspot Miner is customized function exactly like a Helium Hotspot but with a different
 look and feel. Everything else about a RAK Hotspot Miner from its earning capabilities, coverage
