--- a/docs/community-governance/community-voting.mdx
+++ b/docs/community-governance/community-voting.mdx
@@ -18,13 +18,21 @@ community is reaching consensus on. As example, a vote on on frequency plan for 
 concern Hotspots in the region and one would use number Hotspots in the region as votes. Proposals
 to implement more involved voting mechanisms have been presented, but have not been voted on or
 implemented yet. See:
-[HIP41](https://github.com/helium/HIP/blob/master/0041-governance-by-token-lock-v2.md)
 
-HNT holders are able to vote by issuing a small token burn transaction from their wallet to a wallet
-associated with a particular ballot option, typically `For` or `Against`. Voting just a portion of a
-wallet's balance is not supported.
+[HIP 41: Governance By Token Lock V2](https://github.com/helium/HIP/blob/master/0041-governance-by-token-lock-v2.md)
 
-<!-- ## How to Vote -->
+[HIP 60: Entity-Weighted Voting](https://github.com/helium/HIP/blob/main/0060-entity-weighted-vote.md)
+
+HNT holders are able to vote by issuing a very small token burn transaction from their wallet (<$0.01)
+to a wallet associated with a particular ballot option, typically `For` or `Against`. Voting just a 
+portion of a wallet's balance is not supported. It costs 30,000 DC ($0.30) for the vote transaction.
+
+## How to vote
+
+Voting is performed by scanning a barcode with either of the Helium Apps and is based on the current 
+HNT amount held in the Helium wallet. Therefore HNT must be present in the Helium wallet or staked 
+directly on a validator(s) held in your wallet at the time of voting in order to be able to vote.
+
 
 ## Helium Vote Configuration
 
