Genesis Period explainer text clarification

--- a/docs/5g-on-helium/cbrs-radios.mdx
+++ b/docs/5g-on-helium/cbrs-radios.mdx
@@ -145,7 +145,7 @@ A message similar to the following may also be present:
 
 ### DPA Neighborhood Regions
 
-DPA regions can be viewed in the map below. Remember, these coordinates are not exact, and the
+DPA regions can be viewed on the map below. Remember, these coordinates are not exact, and the
 effected regions for each DPA Event can reach as far as 150km inland.
 
 <div class="maps_iframe">
