--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -76,12 +76,12 @@ Helium Network. 5G Hotspots are rewarded in the Helium MOBILE Token.
 
 :::info
 
-During the Genesis Period, 5G Hotspots will earn MOBILE by reporting their status via a “heartbeat”,
-an automatic process of reporting to the Helium Blockchain that the Small Cell Radio is online and
-registered with the SAS.
+During the Genesis Period, 5G Hotspots will begin to earn MOBILE by reporting their status via a
+“heartbeat”, an automatic process of reporting to the Helium Blockchain that the Small Cell Radio is
+online and registered with the SAS.
 
-The Genesis Period begins when MOBILE mining starts and ends once the Mobile subDAO Treasury is
-established.
+Genesis is the period during which Hotspot owners will be rewarded for providing 5G coverage with
+pre-mined MOBILE tokens. MOBILE tokens will be redeemable for HNT after the Genesis period ends.
 
 :::
 
@@ -107,7 +107,7 @@ launch of MOBILE tokens assigning a premine amount of MOBILE to the Helium Found
 Foundation will work with the core developers to begin the Genesis period of MOBILE rewards. Genesis
 rewards will be paid out of the Foundation's pre-mined MOBILE rewards pool.
 
-Currently, the Helium Foundation intends to issue 100M tokens per day in the Genesis period and it
+Currently, the Helium Foundation intends to issue 100M tokens per day in the Genesis period, and it
 will be proportionally distributed to all active 5G Small Cell Radios as described below.
 
 ## Small Cell Radio Reward Scaling
