Apply suggestions from code review

--- a/docs/5g-on-helium/cbrs-radios.mdx
+++ b/docs/5g-on-helium/cbrs-radios.mdx
@@ -97,7 +97,7 @@ change frequently.
     </div>
     <div class="col col--3" style={{ marginBottom: 0 }}>
       <img className="homeicon" src={useBaseUrl('img/5g-on-helium/sas-failure-small.png')} />
-      <p>The CBRS Spectrum access service is disabled to the Small Cell Radio. </p>
+      <p>The CBRS Spectrum access Grant to the Small Cell Radio has Failed. </p>
       <p>
         See <a href="./cbrs-radios#spectrum-access-failure-status">below</a> for more information.
       </p>
@@ -150,7 +150,7 @@ This status is alarming, but do not let it scare you.
 For newly installed Small Cell Radios, this "Failure" status is likely because the registration
 process has not been completed and submitted to the SAS.
 
-You may see information similar to this:
+You may see an information pop up similar to this:
 
 > SAS status code: 200 SAS response message: Response data: installationParam
 
