--- a/docs/5g-on-helium/cbrs-radios.mdx
+++ b/docs/5g-on-helium/cbrs-radios.mdx
@@ -69,7 +69,7 @@ Gbps or your internet speed, whichever is lower.
 
 ### Spectrum Access on the 5G Hotspot Dashboard
 
-The Spectrum Access status will be in one of three states. It is not uncommon to see this status
+The Spectrum Access status will be in one of four states. It is not uncommon to see this status
 change frequently.
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
