--- a/docs/5g-on-helium/cbrs-radios.mdx
+++ b/docs/5g-on-helium/cbrs-radios.mdx
@@ -84,20 +84,20 @@ change frequently.
     <div class="col col--3" style={{ marginBottom: 0 }}>
       <img className="homeicon" src={useBaseUrl('img/5g-on-helium/sas-connected-small.png')} />
       <p>
-        The Small Cell Radio Spectrum Access was recently <code>None</code> and is comming back
+        The Spectrum Access was recently <code>None</code> and is comming back
         online, this status should be transitory.
       </p>
     </div>
     <div class="col col--3" style={{ marginBottom: 0 }}>
       <img className="homeicon" src={useBaseUrl('img/5g-on-helium/sas-none-small.png')} />
-      <p>The CBRS Spectrum access service is disabled to the Small Cell Radio. </p>
+      <p>The Spectrum Access is disabled to the Small Cell Radio. </p>
       <p>
         See <a href="./cbrs-radios#spectrum-access-none-status">below</a> for more information.
       </p>
     </div>
     <div class="col col--3" style={{ marginBottom: 0 }}>
       <img className="homeicon" src={useBaseUrl('img/5g-on-helium/sas-failure-small.png')} />
-      <p>The CBRS Spectrum access Grant to the Small Cell Radio has Failed. </p>
+      <p>The Spectrum Access Grant to the Small Cell Radio has Failed. </p>
       <p>
         See <a href="./cbrs-radios#spectrum-access-failure-status">below</a> for more information.
       </p>
