--- a/docs/5g-on-helium/cbrs-radios.mdx
+++ b/docs/5g-on-helium/cbrs-radios.mdx
@@ -8,7 +8,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # CBRS Small Cell Radios
 
-Instead of an antenna, Helium 5G Hotspots use Citizens Broadband Radio Service (CBRS) Radios to
+Instead of an LoRa antenna, Helium 5G Hotspots use Citizens Broadband Radio Service (CBRS) Radios to
 provide cellular coverage. CBRS is a wide broadcast 3.5Ghz band in the United States that does not
 require a tower operator to acquire spectrum licenses.
 
