--- a/docs/5g-on-helium/cbrs-radios.mdx
+++ b/docs/5g-on-helium/cbrs-radios.mdx
@@ -10,7 +10,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 Instead of an LoRa antenna, Helium 5G Hotspots use Citizens Broadband Radio Service (CBRS) Radios to
 provide cellular coverage. CBRS is a wide broadcast 3.5Ghz band in the United States that does not
-require a tower operator to acquire spectrum licenses.
+require a 5G Hotspot Host to acquire spectrum licenses.
 
 More information about CBRS can be found on the
 [Federal Communications Commission Website](https://www.fcc.gov/35-ghz-band-overview)
