--- a/docs/use-the-network/console/cli.mdx
+++ b/docs/use-the-network/console/cli.mdx
@@ -24,7 +24,7 @@ appropriate platform.
 
 ## API Key
 
-You must activate a [Console API key](../my-account#console-api-keys) before using the CLI.
+You must activate a [Console API key](./my-account#console-api-keys) before using the CLI.
 
 The first time you run the CLI, it will prompt you for this key. It will save the key in a local
 file: `.helium-console-config.toml`
