--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -158,11 +158,11 @@ radio model.
 In this example, the Total Rewards Units per epoch is 2,000 and the ratios are as follows:
 
 ```bash
-  (High-Power Outdoor Count * 2.0)    =>    600
-+            (Outdoor Count * 1.5)    =>  + 600
-+             (Indoor Count * 1.0)    =>  + 800
-------------------------------------      ------
-                                          2,000
+  (High-Power Outdoor Count (300) * 2.0)    =>    600
++            (Outdoor Count (400) * 1.5)    =>  + 600
++             (Indoor Count (800) * 1.0)    =>  + 800
+------------------------------------            ------
+                                                2,000
 ```
 
 ### Earnings per Small Cell Radio
