--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -36,6 +36,10 @@ individual 5G Hotspot Makers. As an example, see the FreedomFi installation guid
 - [FreedomFi Indoor Install Guide](https://freedomfi.com/freedomfi-indoor-cbrs-small-cell-setup-guide/)
 - [FreedomFi Outdoor Install Guide](https://freedomfi.com/freedomfi-outdoor-cbrs-small-cell-setup-guide/)
 
+You can also find further CBRS radio troubleshooting guide from the Bobcat Knowledge Center: 
+  
+- [CBRS Radio Troubleshooting Guide](https://bobcatminer.zendesk.com/hc/en-us/articles/7282743642395-Troubleshooting-Issues-with-the-Indoor-CBRS-Small-Cell-Radio)
+
 :::warning
 
 Misrepresentation of CBRS Radio installation information, including GPS location, height, antenna
@@ -49,6 +53,9 @@ Radio will automatically initialize and acquire a GPS lock. Once that is complet
 Radio dashboard appears under the "Radio Dashboard" tab on the local IP address of the 5G Hotspot.
 
 > [http://freedomfi-gateway.local/](http://freedomfi-gateway.local/)
+
+If you are using a Bobber 500 gateway, you can access the miner and radio dashboard via this URL: 
+> [http://bobber-gateway.local/](http://bobber-gateway.local/)
 
 5G Hotspot will appear on [explorer.helium.com](https://explorer.helium.com/) within 2-4 days,
 depending on how quickly it is registered in the SAS.
