Fix two typographical errors in open-source.mdx

--- a/docs/open-source/open-source.mdx
+++ b/docs/open-source/open-source.mdx
@@ -39,11 +39,11 @@ written in Erlang.
 - [Erlang libp2p](https://github.com/helium/erlang-libp2p) - Libp2p swarms written in (you guessed
   it) Erlang.
 - [Helium CLI Wallet](https://github.com/helium/helium-wallet-rs) - Command Line Interface, written
-  in Rust, used to created and administer Helium wallets, and interact with the Helium Network.
+  in Rust, used to create and administer Helium wallets, and interact with the Helium Network.
 - [Helium JS](https://github.com/helium/helium-js) - Typescript SDKs for interacting with the Helium
   blockchain.
 - [Packet Purchaser](https://github.com/helium/packet-purchaser) - Service that buys Helium LoRaWAN
-  packets from the Network and delivers the them to a target LoRaWAN Network server.
+  packets from the Network and delivers them to a target LoRaWAN Network server.
 - [Angry Purple Tiger](https://github.com/helium/angry-purple-tiger) - Ever wonder how your Miner
   got its cute little animal name? Here it is.
 
