--- a/docs/use-the-network/devices/development/opensource/paxcounter.mdx
+++ b/docs/use-the-network/devices/development/opensource/paxcounter.mdx
@@ -3,7 +3,7 @@ id: paxcounter
 hide_title: true
 title: Paxcounter (ESP32 Board)
 description: Paxcounter is a ESP32 based device to meter pax flows in realtime
-image: img/use-the-network/devices/development/opensource/paxcounter.png
+image: [img/use-the-network/devices/development/opensource/paxcounter.png](https://github.com/cyberman54/ESP32-Paxcounter/blob/master/img/Paxcounter-title.jpg)
 sidebar_label: Paxcounter (ESP32 Board)
 slug: /use-the-network/devices/development/opensource/paxcounter
 ---
