--- a/docs/use-the-network/devices/development/opensource/paxcounter.mdx
+++ b/docs/use-the-network/devices/development/opensource/paxcounter.mdx
@@ -2,8 +2,8 @@
 id: paxcounter
 hide_title: true
 title: Paxcounter (ESP32 Board)
-description: Paxcounter is a ESP32 based device to meter pax flows in realtime
-image: [img/use-the-network/devices/development/opensource/paxcounter.png](https://github.com/cyberman54/ESP32-Paxcounter/blob/master/img/Paxcounter-title.jpg)
+description: 
+  Paxcounter is a ESP32 based device to meter pax flows in realtime
 sidebar_label: Paxcounter (ESP32 Board)
 slug: /use-the-network/devices/development/opensource/paxcounter
 ---
