--- a/docs/use-the-network/devices/development/development.mdx
+++ b/docs/use-the-network/devices/development/development.mdx
@@ -162,6 +162,19 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
       </a>
     </div>
     <div class="col col--4" style={{ marginBottom: 100 }}>
+      <a href="/use-the-network/devices/development/opensource/">
+        <img
+          className="manufacturericon"
+          src={useBaseUrl('img/use-the-network/devices/development/opensource/osi_standard_logo_0.png')}
+        />
+      </a>
+      <p></p>
+      <a href="/use-the-network/devices/development/opensource/">
+        {' '}
+        View Devices <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+      </a>
+    </div>
+    <div class="col col--4" style={{ marginBottom: 100 }}>
       <a href="/use-the-network/devices/development/stmicroelectronics/st-b-l072z-lrwan1">
         <img
           className="manufacturericon"
